profilelist1exp/unpackaged/objects/LOB_Administration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_Administration_Name_Unique__c</fullName>
        <label>LOB Administration Name_Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Linkage_Expiry_Default__c</fullName>
        <label>Linkage Expiry Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LOB Administration</label>
    <nameField>
        <label>LOB Administration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOB Administration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_LOB_Admin_Create_Update</fullName>
        <active>true</active>
        <description>Only users with LOB title as &quot;GCC Global Program Manager&quot; should be allowed to create or update LOB administration records</description>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$User.LOB_Title__c &lt;&gt; &quot;GCC Global Program Manager&quot; 
)</errorConditionFormula>
        <errorMessage>Your &quot;LOB Title&quot; is not &quot;GCC Global Program Manager&quot;.You cannot create or update the details.</errorMessage>
    </validationRules>
</CustomObject>